# robot4ws_perception

./: CMakeLists.txt  README.md  package.xml
config/: color_detection_params.yaml
launch/: color_detection.launch
src/: color_detector_node.py  color_detector_with_depth_node.py
